--- a/.lando.yml
+++ b/.lando.yml
@@ -1,4 +1,4 @@
-name: ehs9
+name: ebb
 recipe: 'drupal8'
 config:
   php: '8.1'
@@ -11,6 +11,6 @@ services:
   appserver:
     overrides:
       environment:
-        DRUSH_OPTIONS_URI: "https://ehs9.lndo.site"
+        DRUSH_OPTIONS_URI: "https://ebb.lndo.site"
   pma:
     type: phpmyadmin
