--- a/config/sync/core.entity_view_display.node.page.default.yml
+++ b/config/sync/core.entity_view_display.node.page.default.yml
@@ -56,6 +56,21 @@ third_party_settings:
                 third_party_settings: {  }
             weight: 2
             additional: {  }
+          ae6422c0-dfdd-452a-8123-1eb254eab19b:
+            uuid: ae6422c0-dfdd-452a-8123-1eb254eab19b
+            region: content
+            configuration:
+              id: 'field_block:node:page:body'
+              label_display: '0'
+              context_mapping:
+                entity: layout_builder.entity
+              formatter:
+                type: text_default
+                label: hidden
+                settings: {  }
+                third_party_settings: {  }
+            weight: 3
+            additional: {  }
         third_party_settings: {  }
   layout_builder_restrictions:
     entity_view_mode_restriction:
