--- a/config/sync/field.field.node.horizontal_landing_page.field_body_1.yml
+++ b/config/sync/field.field.node.horizontal_landing_page.field_body_1.yml
@@ -4,6 +4,8 @@ status: true
 dependencies:
   config:
     - field.storage.node.field_body_1
+    - filter.format.basic_html
+    - filter.format.text_editor_basic
     - node.type.horizontal_landing_page
   module:
     - text
@@ -20,4 +22,7 @@ default_value_callback: ''
 settings:
   display_summary: true
   required_summary: false
+  allowed_formats:
+    - text_editor_basic
+    - basic_html
 field_type: text_with_summary
